samples/_failures_safe/1761301397_26d334_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9702bb1d.c: In function ‘main’:
./samples/SAFE/__tmp_9702bb1d.c:146:9: error: expected declaration or statement at end of input
  146 |         if (len > 0 && input_buffer[len - 1] == '\n') {
      |         ^~
./samples/SAFE/__tmp_9702bb1d.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9702bb1d.c:146:9: error: expected declaration or statement at end of input
